# simple-state

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  LICENSE.html  LICENSE.md  Makefile  README.md  cmake_install.cmake
.github/workflows/: ci.yml
diagrams/: blinky.mmd  uart.mmd
examples/: stm32f405_hal_main.cpp
include/simple_state/: blinky_controller.hpp  blinky_controller_user.hpp  crtp_state_machine.hpp  simulated_board.hpp  stm32f405_hal_board.hpp
src/: demo_main.cpp
tests/: state_machine_test.cpp
tools/: compare_state_transitions.py  mermaid_to_controller.py
tools/templates/: controller_generated.hpp.jinja  controller_user.hpp.jinja  controller_wrapper.hpp.jinja
